; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_shims.c_proc_usynch_thread_qos_remove_override_for_resource.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_shims.c_proc_usynch_thread_qos_remove_override_for_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uthread = type { i32 }

@THREAD_NULL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.uthread*, i32, i32, i32)* @proc_usynch_thread_qos_remove_override_for_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proc_usynch_thread_qos_remove_override_for_resource(i32 %0, %struct.uthread* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.uthread*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store %struct.uthread* %1, %struct.uthread** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load %struct.uthread*, %struct.uthread** %7, align 8
  %13 = icmp ne %struct.uthread* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %5
  %15 = load %struct.uthread*, %struct.uthread** %7, align 8
  %16 = getelementptr inbounds %struct.uthread, %struct.uthread* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  br label %20

18:                                               ; preds = %5
  %19 = load i32, i32* @THREAD_NULL, align 4
  br label %20

20:                                               ; preds = %18, %14
  %21 = phi i32 [ %17, %14 ], [ %19, %18 ]
  store i32 %21, i32* %11, align 4
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %11, align 4
  %24 = load i32, i32* %8, align 4
  %25 = load i32, i32* %9, align 4
  %26 = load i32, i32* %10, align 4
  %27 = call i64 @proc_thread_qos_remove_override(i32 %22, i32 %23, i32 %24, i32 %25, i32 %26)
  %28 = icmp eq i64 %27, 0
  %29 = zext i1 %28 to i32
  ret i32 %29
}

declare dso_local i64 @proc_thread_qos_remove_override(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
